2021-07-22  Matteo Corti  <matteo@corti.li>

    * check_updates (run_command): LC_ALL=C

2021-05-19  Matteo Corti  <matteo@corti.li>

    * check_updates (debug): Debug to a file

2021-04-15  Matteo Corti  <matteo@corti.li>

    * check_updates: Added the --number-only option

2021-01-21  Matteo Corti  <matteo@corti.li>

    * check_updates (check_running_kernel): support for CentOSPlus

2020-06-19  Matteo Corti  <matteo@corti.li>

    * check_updates (run_yum): Ignoring an additional message from YUM

2020-06-05  Matteo Corti  <matteo@corti.li>

    * check_updates: (run_yum): Ignoring an additional message from YUM

2020-03-12  Matteo Corti  <matteo@corti.li>

    * check_updates (run): Show the version number in the debug output
    * check_updates(run_yum): better YUM outpt handling

2020-02-26  Matteo Corti  <matteo@corti.li>

    * check_updates (run_yum): Ignoring an additional message from YUM

2019-12-28  Matteo Corti  <matteo@corti.li>

    * check_updates (run_yum): using check_updates -q

2019-12-11  Matteo Corti  <corti@matteo.ethz.ch>

    * check_updates (run_yum): Disables Foreman

2019-10-29  Matteo Corti  <matteo@corti.li>

    * check_updates: Added support for Sangoma FreePBX distro

2019-08-20  Matteo Corti <matteo@corti.li>

    * check_updates (run_yum): Fixed the parsing of --security output

2019-08-05  Matteo Corti  <matteo@corti.li>

    * check_updates: checks for missing GPG key

2019-06-13  Matteo Corti  <matteo@corti.li>

    * check_updates: RHEL 8 support

2019-05-07  Matteo Corti  <matteo@corti.li>

    * check_updates (clean_kernel_version): Azure CentOS support

2019-02-11  Matteo Corti  <matteo@corti.li>

    * check_updates: Fixed a bug while checking for the security plugin

2018-12-19  Matteo Corti  <matteo@corti.li>

    * check_updates: Added --quiet

2018-11-27  Matteo Corti  <matteo@corti.li>

    * check_updates: Removed Nagios::Plugin

2018-06-19  Matteo Corti  <matteo@corti.li>
